fix: resolve SonarCloud maintainability and security issues